<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="#2196F3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pt_appTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#4054BF"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="BahasaBoost: Malay"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="619dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="41dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            app:srcCompat="@drawable/signup" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register:"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:text="Register" />

        <TextView
            android:id="@+id/tv_backtologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textStyle="normal"
            android:gravity="center"
            android:textSize="14sp"
            />


    </LinearLayout>

</LinearLayout>