<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDEF"
    tools:context=".SplashScreen">

    <View
        android:id="@+id/top_view_stripe1"
        android:layout_width="18dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:background="#FFFFFF" />

    <View
        android:id="@+id/top_view_stripe2"
        android:layout_width="18dp"
        android:layout_height="90dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/top_view_stripe1"
        android:background="@color/green"
        android:visibility="invisible" />

    <View
        android:id="@+id/top_view_stripe3"
        android:layout_width="18dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/top_view_stripe2"
        android:background="@color/red"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo_image_view_description"
            android:src="@drawable/app_logo"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_slogan"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:id="@+id/bottom_view_stripe1"
        android:layout_width="18dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:background="#FFFFFF" />

    <View
        android:id="@+id/bottom_view_stripe2"
        android:layout_width="18dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/bottom_view_stripe1"
        android:background="@color/green"
        android:visibility="invisible" />

    <View
        android:id="@+id/bottom_view_stripe3"
        android:layout_width="18dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/bottom_view_stripe2"
        android:background="@color/red"
        android:visibility="invisible" />

</RelativeLayout>